--- a/exercicio data e hora/estilo.css
+++ b/exercicio data e hora/estilo.css
@@ -1,4 +1,26 @@
 body {
+  background: rgb(218, 63, 63);
+  color: black;
+  text-align: center;
+  font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+div{
   background: white;
- color: black;
+  display: block;
+  margin: auto;
+  padding: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.555);
+  width: 300px;
+  border-radius: 10px;
+}
+
+input[type=button] {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  color: rgb(0, 0, 0);
+  margin: 10px;
+  padding:10px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.555);
 }
