--- a/exercicio data/estilo.css
+++ b/exercicio data/estilo.css
@@ -1,4 +1,31 @@
 body {
   background: white;
- color: black;
+  font-family: Helvetica;
+  color: black;
+  text-align: center;
+}
+
+div {
+  background: rgb(107, 221, 112);
+  display: block;
+  margin: auto;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.555);
+  width: 300px;
+  border-radius: 10px;
+}
+
+input[type=button]{
+  color: white;
+  background-color: green;
+  border: none;
+  padding:10px;
+}
+
+input[type=button]:hover{
+  color: rgb(0, 0, 0);
+  background-color: rgb(20, 187, 20);
+  border: none;
+  padding:10px;
 }
